Add all the docs